fix RDP keyboad layout setting

- got broken due to rdesktop to xfreerdp migration
- just support already supported layouts from rdesktop (due to message freeze in stable branch)

BUG: 323220
FIXED-IN: 4.11.1